lab1/Test/L1-A-6-13.output
Error Type B at Line 2
Error Type A at Line 9
Error Type A at Line 13
Error Type B at Line 19
Error Type B at Line 24
Error Type A at Line 27
Error Type B at Line 27
Error Type A at Line 28
Error Type A at Line 29
Error Type B at Line 32
Error Type B at Line 35
