lab1/Test/L1-A-6-13.cmm
float BntDuk , Wfot2Xz [ 2133532331 ] , O3FrBbgIJx 
  [ 1970006166 ] ahQm5jZG28YKimG_m , x8cfnKJ1 , EKB 





;
struct :{
  float fQKaCak50DN [ 569490006 ] [ 1571326645 ] ;
};
float WG0vUXrK ( ) {
  int unGDCnwPdg5knyLBc ^, roP6zARSAlq860 [ 2072416887 
    ] = rLCdapR3n0 , KmuhmGlVVvaGIIWN ;
  int k [ 90628613 ] [ 1319435563 ] = ! VGjdTaogLpmqYpIrgB 
    / jsG3307nIxYnqEo * VyLdi - sGf - qq - gUCLQ - wUYplU3VjH6N81M 
    + ArVAwq7Ehvz04y > WG >= UGKi3A5WJ8iu9VO4E6QK || mYbMt6WvWiFbOgZUI 
    || UWJdy__4 , WsHOXi [ 1633267191 ] [ 1490175133 ] 
    [ 1958783944 ] [ 767012485 ] pr , E4G3qhDiDHO1yIY6hK 
    ;
  return ! - - eeGz265JMZJmeYF4 = ! vLsrv0t9goqWOtlM4 
    / seC7OmcRHVGMcZDJ - zst1J6puw4CpXIePs + v51i_4U5MAFYZIJVefx 
    - SUUHGXtOAW - qcW8H < SQFZrBGm86fOgS == zOlnk0X > 
    DDK && ;
  if ( ! Y4R6d1eqfRAHQM37xPT / fWYu9paxOW5f != WzXLDa2xNgpLlljnqNmD 
    > Dyc3rNBGKo == M6Jef || F7jj7gnepu5 || U || B6az0eKbj65j4fR 
    %)   if ( r7kIdH0vzvTmu97f ) <   if ( Enlhz )   Ijb 
    ';
$


  while ( eFAXbrY )   ZmueoV4JrIiwv struct ;

}
* 